# neit

./: .prettierrc  Cargo.toml  LICENSE  README.md  SYNTAX.MD  SYNTAX.md  TEST.exe.out  _.c  _.txt  a.out  build.bat  build.sh  clean.bat  clean.sh  clippy.txt  flake.nix  hashes  nulibc.c  nulibc.h  out.out  output  push.sh  replace.sh  run.c  rust-toolchain.toml  std_lib_content  t.txt  temp.asm  temp.c  test.nsc  tst.nsc  y.nsc
.cargo/: config.toml
nlib/std/: std.nsc
sam/: _.c  _.out  biog  main.nsc  project.conf  samgrm.grm
src/: build.rs  cli.rs  codegen.rs  err.rs  main.rs  nrunp.rs  nulibc.rs  p.rs  p2.rs  p3.rs  pbc.rs
src/build_system/: linux_b.rs  mod.rs
src/c_gens/: makec.rs  mod.rs
src/compilers/: compile.rs  genasm.rs  genasm_lin.rs  genasm_win.rs  mod.rs
src/compilers/llvm/: bc.rs  bllvm.rs  c.rs  llvm.rs  mod.rs
src/err_system/: err_types.rs  error_msg_gen.rs  mod.rs
src/helpers/: c_condmk.rs  condition_parser.rs  mod.rs
src/ntune/: mod.rs  ntune.rs
src/optimisers/: mod.rs  pass1.rs
src/parse_systems/: mod.rs  parse1.rs  parse2.rs  parse3.rs  parse4.rs  parse5.rs
src/tok_system/: lexer.rs  mod.rs  tokens.rs
src/utils/: case.rs  cond_evaluator.rs  fo.rs  ftokens.rs  maths.rs  mod.rs  token.rs  types.rs
src/utils/tokens/: func.rs  input.rs  mod.rs  print.rs  var.rs
