[package]
name = "neit"
version = "0.1.0"
edition = "2021"


[profile.release]
opt-level = 3           # Optimize for binary size (alternative: "s" for size; "3" for maximum speed)
lto = "fat"             # Link-Time Optimization (LTO) across crate dependencies, "fat" maximizes optimization
codegen-units = 4       # Single codegen unit for maximum optimization (at the cost of compile time)
panic = "abort"         # Do not generate code for unwinding in case of a panic
strip = true            # Remove debug symbols to reduce the size of the binary
debug = true           # Do not include debug information in the release build
overflow-checks = false # Disable overflow checks (this can improve performance but sacrifices safety)
incremental = false     # Disable incremental compilation to maximize optimization
rpath = false           # Do not include runtime path information

[dependencies]
