[package]
name = "neit"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "3.0.0"
lazy_static = "1.5.0"
num_cpus = "1.16.0"
phf = { version = "0.11.3", features = ["macros"] }
rand = "0.9.0"
sha2 = "0.10.8"
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "unwind"
rpath = false
debug = false
overflow-checks = false
